--- a/config/database.yml
+++ b/config/database.yml
@@ -9,6 +9,13 @@ default: &default
   pool: 5
   timeout: 5000
 
+production:
+  adapter: postgresql
+  encoding: unicode
+  username: user
+  password: pass
+  database: db/production
+
 development:
   <<: *default
   database: db/development.sqlite3
@@ -19,7 +26,3 @@ development:
 test:
   <<: *default
   database: db/test.sqlite3
-
-production:
-  <<: *default
-  database: db/production.sqlite3
